add template files for gulp build system

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -7,5 +7,10 @@
     "start": "./node_modules/.bin/nodemon bin/www"
   },
   "author": "<%= author %>",
-  "license": "MIT"
+  "license": "MIT",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
